--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-/target/
+v2/target/classes/*
+v2/target/m2e-wtp/web-resources/META-INF/maven/it.soprasteria.pianificazione/v2/pom.properties
+*.class
