--- a/v2/src/main/webapp/WEB-INF/web.xml
+++ b/v2/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 
 	<!-- For web context -->
 	<servlet>
-		<servlet-name>hello-dispatcher</servlet-name>
+		<servlet-name>spring-dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
@@ -15,7 +15,7 @@
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>hello-dispatcher</servlet-name>
+		<servlet-name>spring-dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
@@ -38,4 +38,19 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<error-page>
+		<error-code>400</error-code>
+		<location>/error/400</location>
+	</error-page>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error/404</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error/500</location>
+	</error-page>
+	
 </web-app>
