--- a/v2/pom.xml
+++ b/v2/pom.xml
@@ -96,6 +96,11 @@
 			<version>2.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.dblock.waffle</groupId>
+			<artifactId>waffle-tomcat7</artifactId>
+			<version>1.8.1</version>
+		</dependency>
 
 	</dependencies>
 
