--- a/v2/src/main/webapp/WEB-INF/web.xml
+++ b/v2/src/main/webapp/WEB-INF/web.xml
@@ -13,10 +13,18 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
+	<servlet>
+		<servlet-name>WaffleInfo</servlet-name>
+		<servlet-class>waffle.servlet.WaffleInfoServlet</servlet-class>
+	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>hello-dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>WaffleInfo</servlet-name>
+		<url-pattern>/waffle</url-pattern>
 	</servlet-mapping>
 
 	<!-- For root context -->
@@ -30,12 +38,71 @@
 	</context-param>
 
 	<filter>
+		<filter-name>SecurityFilter</filter-name>
+		<filter-class>waffle.servlet.NegotiateSecurityFilter</filter-class>
+		<init-param>
+			<param-name>principalFormat</param-name>
+			<param-value>fqn</param-value>
+		</init-param>
+		<init-param>
+			<param-name>roleFormat</param-name>
+			<param-value>both</param-value>
+		</init-param>
+		<init-param>
+			<param-name>allowGuestLogin</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>securityFilterProviders</param-name>
+			<param-value>
+    		waffle.servlet.spi.NegotiateSecurityFilterProvider
+    		waffle.servlet.spi.BasicSecurityFilterProvider
+    	</param-value>
+		</init-param>
+		<init-param>
+			<param-name>waffle.servlet.spi.NegotiateSecurityFilterProvider/protocols</param-name>
+			<param-value>
+    		Negotiate
+    		NTLM
+    	</param-value>
+		</init-param>
+		<init-param>
+			<param-name>waffle.servlet.spi.BasicSecurityFilterProvider/realm</param-name>
+			<param-value>WaffleFilterDemo</param-value>
+		</init-param>
+	</filter>
+	<filter>
 		<filter-name>sessionFilter</filter-name>
 		<filter-class>it.soprasteria.pianificazione.v2.filter.SessionFilter</filter-class>
 	</filter>
+	
+	<filter-mapping>
+		<filter-name>SecurityFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>sessionFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<error-page>
+		<error-code>400</error-code>
+		<location>/WEB-INF/views/jsp/error/400.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>401</error-code>
+		<location>/WEB-INF/views/jsp/error/401.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/WEB-INF/views/jsp/error/403.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/jsp/error/404.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/views/jsp/error/500.jsp</location>
+	</error-page>
 </web-app>
