--- a/v2/pom.xml
+++ b/v2/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>v2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>VisualV2</name>
+	<name>v2</name>
 
 	<properties>
 		<jdk.version>1.7</jdk.version>
@@ -95,13 +95,19 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
-
+<!-- 
 		<dependency>
 			<groupId>com.github.dblock.waffle</groupId>
 			<artifactId>waffle-tomcat7</artifactId>
 			<version>1.8.1</version>
 		</dependency>
-
+ -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-servlet-api</artifactId>
+			<version>7.0.69</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
