--- a/v2/src/main/webapp/WEB-INF/web.xml
+++ b/v2/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring-core-config.xml</param-value>
 	</context-param>
-
+<!-- 
 	<filter>
 		<filter-name>SecurityFilter</filter-name>
 		<filter-class>waffle.servlet.NegotiateSecurityFilter</filter-class>
@@ -71,15 +71,17 @@
 			<param-value>WaffleFilterDemo</param-value>
 		</init-param>
 	</filter>
+-->	
 	<filter>
 		<filter-name>sessionFilter</filter-name>
 		<filter-class>it.soprasteria.pianificazione.v2.filter.SessionFilter</filter-class>
 	</filter>
-	
+<!-- 	
 	<filter-mapping>
 		<filter-name>SecurityFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+ -->	
 	<filter-mapping>
 		<filter-name>sessionFilter</filter-name>
 		<url-pattern>/*</url-pattern>
@@ -100,6 +102,10 @@
 	<error-page>
 		<error-code>404</error-code>
 		<location>/WEB-INF/views/jsp/error/404.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>405</error-code>
+		<location>/WEB-INF/views/jsp/error/405.jsp</location>
 	</error-page>
 	<error-page>
 		<error-code>500</error-code>
