--- a/v2/pom.xml
+++ b/v2/pom.xml
@@ -106,6 +106,12 @@
 			<version>7.0.69</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.googlecode.lambdaj</groupId>
+		    <artifactId>lambdaj</artifactId>
+		    <version>2.3.3</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
